# aa_real_time_glint

./: CMakeLists.txt  README.md
geometric_glint_aa/: CMakeLists.txt  main.cpp  scene_obj.cpp  scene_obj.h
geometric_glint_aa/shader/: generateLeanTexture.frag.glsl  generateLeanTexture.vert.glsl  improved_glint_envmap.frag.glsl  improved_glint_envmap.vert.glsl  postprocessing.frag.glsl  postprocessing.vert.glsl  render_texture.frag.glsl  skybox.frag.glsl  skybox.vert.glsl
media/ogre/: ogre.mtl
media/silver-snowflake-ornament/: BLENDSWAP_LICENSE.txt  snowflake.mtl
media/snow/: snowman_applied_modifiers.mtl
media/sphere/: sphere.mtl
media/sponza/: sponza.mtl
media/textures/cube_map/glacier/: glacier_negx.hdr  glacier_negy.hdr  glacier_negz.hdr  glacier_posx.hdr  glacier_posy.hdr  glacier_posz.hdr
opengl/: CMakeLists.txt  box.cpp  box.h  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.h  scenerunner.h  stbimpl.cpp  texture.cpp  texture.h  texturepool.cpp  texturepool.h
opengl/imgui/: imgui.cpp
